src/main/java/com/example/error/CurrencyNotFoundException.java
package com.example.error;

public class CurrencyNotFoundException extends Exception {

    public CurrencyNotFoundException(String message) {
        super(message);
    }
}
